Replace Guava constructs with Java8 constructs